yamls/quarkus-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://104.154.151.4:8080/auth/realms/master"
    jwksUri: "http://104.154.151.4:8080/auth/realms/master/protocol/openid-connect/certs"
