yamls/deploy-quarkus-demo-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo-v2
  labels:
    app: quarkus-demo
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-demo
      version: v2
  template:
    metadata:
      labels:
        app: quarkus-demo
        version: v2
    spec:
      serviceAccountName: sash-account
      containers:
      - name: quarkus-demo
        image: gcr.io/moses-327312/quarkus-demo:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m

---
