yamls/quarkus-jwt-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - quarkus-gateway
  http:
  - match:
    - uri:
        prefix: /hello
      headers:
        "@request.auth.claims.realm_access.roles":
          exact: sash
    route:
    - destination:
        port:
          number: 8080
        host: quarkus-demo-svc
