yamls/quarkus-no-security-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-demo
spec:
  hosts:
  - "*"
  gateways:
  - quarkus-gateway
  http:
  - route:
    - destination:
        host: quarkus-demo-svc
        port:
          number: 8080
